[GR-20370] Removed access to deleted URL.hostAddress field.